# maude

./: .gitignore  .gitmodules  README.md  TODO.md  build  build-hist  configure.ac  derive-from-eker
ceta/ceta-alpha1/: Makefile.am  README  TODO  config.h  config.h.in  config.status  configure  configure.ac
ceta/ceta-alpha1/ceta/: bi_graph.hh  (+13 more)
ceta/ceta-alpha2/: Makefile.am  config.h  config.h.in  config.status  configure  configure.ac
ceta/ceta-alpha2/ceta/: ceta.cc  ceta.hh  cfg.hh  closure.hh  combinations.hh  earley.hh  export.h  fa.hh  ldsolver.cc  ldsolver.hh  learn.hh  learncfg.hh  matrix.hh  parikh.hh  qcontainer.hh  rules.am  sls.cc  sls.hh  writer.hh
ceta/ceta-alpha2/examples/: rules.am
ceta/ceta-alpha2/tests/: testceta.cc  testclosure.cc  testlearn.cc  testlearncfg.cc  testmatrix.cc  testparikh.cc  testsls.cc
ceta/ceta-alpha3a/: Makefile.am  TODO  config.h  config.status  configure  configure.ac
ceta/ceta-alpha4/: build  config.h  config.h.in  config.status  configure
contrib/systems/: cycle.maude
contrib/tools/: Makefile
histories/: develop  maude-2.0.1  maude-2.7  maude-2.7-cvc4  maude-2.7-cvc4-pre  maude-2.7.1
patches/: add-local-includes.patch  build-cvc4.patch  cvc4-submodule.patch  full-maude27.patch  highlighters.patch  initial-build.patch  initial-derive-from-eker.patch  initial-gitignore.patch  maude-2.7-manual.patch
patches/cvc4/: 01-add-submodule.patch  02-build-cvc4.patch  03-local-includes.patches
src/BuiltIn/: terminationCheckerSymbol.cc
src/Mixfix/: banner.cc  mixfixModule.cc  symbolType.hh
tests/tools/: Makefile.am
(+42 files in other folders)
